--- a/SA_ICT9R_Project_Navato.html
+++ b/SA_ICT9R_Project_Navato.html
@@ -98,7 +98,7 @@ img {vertical-align: middle;}
 
     </style>
 </head>
-<body style="background-color: #7F7F7F;">
+<body style="background-color: ;">
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
 <a class="navbar-brand navbar-active" href="SA_ICT9R_Project_Navato.html">About Fire Prevention</a>   
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"></button>
