--- a/AB.html
+++ b/AB.html
@@ -4,22 +4,45 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 	<title>Author's Biography</title>
 	<style type="text/css">
+
+
+
+
+
 .navbar-active {
-            font-weight: bold;
+            font-weight: 
         }
+        body{
+      background: url('https://wallpapercave.com/wp/wp8303378.jpg');
+        background-size:cover ;
+        background-attachment: fixed;
+        font-family: Verdana, sans-serif;
+        
+    }
 	</style>
 
 </head>
-<body>
+<body style="background-color: #000000; color: #FFFFFF;">
 
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-<a class="navbar-brand navbar-active" href="SA_ICT9R_Project_Navato.html">About Fire Prevention</a>   
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"></button>
+  <div class="logo-image"><img src="FPC.png" class="img-fluid" style="width:400px;"></div>
+
+
 <div class="collapse navbar-collapse" id="#collapsibleNavbar">
-    <ul class="navbar-nav">
+  
+    <ul class="navbar-nav ml-auto">
+      
+      <a class="navbar-brand navbar-active" href="MA.html">My Account</a>   
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"></button>
+      <li class="nav-item">
+        <a class="nav-link" href="SA_ICT9R_Project_Navato.html" >About Fire Prevention</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="AB.html">Author's Biography</a>
       </li>
@@ -27,16 +50,16 @@
         <a class="nav-link" href="TIPS.html">Prevention Tips</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Gallery</a>
+        <a class="nav-link" href="PG.html">Gallery</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contacts</a>
+        <a class="nav-link" href="C.html">Contacts</a>
       </li>
     </ul>
 </div>
 <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+    <input class="form-control ml-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-dark my-2 my-sm-0" type="submit" style="background-color:gray;">Search</button>
   </form>
 </nav>
 
