--- a/SA_ICT9R_Project_Navato.html
+++ b/SA_ICT9R_Project_Navato.html
@@ -12,7 +12,7 @@
         
 
     .navbar-active {
-            font-weight: bold;
+            font-weight: ;
         }
 @media screen and (max-width: 600px) {
   .topnav a, .topnav input[type=text] {
@@ -29,7 +29,9 @@
   }
 }
 {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
+body {font-family: Verdana, sans-serif; margin:1; color: #FFFFFF; }
+
+
 .mySlides {display: none}
 img {vertical-align: middle;}
 
@@ -96,55 +98,84 @@ img {vertical-align: middle;}
 
 
 
+
     </style>
 </head>
-<body style="background-color: ;">
+<body style="background-color:#000000 ;">
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-<a class="navbar-brand navbar-active" href="SA_ICT9R_Project_Navato.html">About Fire Prevention</a>   
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"></button>
+<div class="logo-image"><img src="FPC.png" class="img-fluid" style="width:400px;"></div>
+
 <div class="collapse navbar-collapse" id="#collapsibleNavbar">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav ml-auto">
+      <a class="navbar-brand navbar-active" href="MA.html">My Account</a>   
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"></button>
       <li class="nav-item">
-        <a class="nav-link" href="AB.html">Author's Biography</a>
+        <a class="nav-link" href="SA_ICT9R_Project_Navato.html" >About Fire Prevention</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="AB.html" >Author's Biography</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="TIPS.html">Prevention Tips</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Gallery</a>
+        <a class="nav-link" href="PG.html">Gallery</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contacts</a>
+        <a class="nav-link" href="C.html">Contacts</a>
       </li>
     </ul>
 </div>
 <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+    <input class="form-control ml-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-dark my-2 my-sm-0" type="submit" style="background-color:gray;">Search</button>
   </form>
 </nav>
 <br>
+
+
+
+
+
+<div class="fire-prevention-container">
+    <h1 style="text-align: center; ">Fire Prevention Month</h1>
+  <p style="text-align:justify; margin-right: 80px; margin-left: 80px;">
+A proclamation known as Proclamation No. 360, issued on January 23, 1989, designated March as Burn Prevention Month. Corazon Aquino, the president at the time, in 1989. This is of highest importance since it strives to improve education in all stages of burn care and spread knowledge in the area of burn prevention.
+
+In the Philippines, March ushers in the summertime and is one of the warmest months of the year. A surge in recorded fire instances across the nation is attributed to the hot, dry weather, which, according to the state weather agency PAGASA, begins to reach higher levels in March as well as higher temperatures and humidity levels. There have also been a lot of fire accidents this month, according to records.
+</p>
+
 <br>
 
+<p style="text-align:justify; margin-right: 80px; margin-left: 80px;">
+    The summer season in the Philippines officially starts in March, which is one of the hottest months of the year. The temperature and humidity start to climb in March, according to the state meteorological service PAGASA, and the hot, dry weather is associated with an increase in recorded fire cases across the nation. Also, this month has a long history of fire accidents.
+</p>
 
+<p style="text-align:justify; margin-right: 80px; margin-left: 80px;">
+<b>Fire Prevention Concerns Us Everyone</b>
+</p>
 
+<p style="text-align:justify; margin-right: 80px; margin-left: 80px;">
+The month of fire prevention is not a festival. It serves as a prompt to be extra cautious. While fire is seen as a human-induced (man-made) calamity, let's all do our part to promote public safety awareness and disaster preparedness.
+</p>
+</div>
 
 <div class="slideshow-container">
 
   <div class="mySlides ">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext"></div>
     <img src="https://images.unsplash.com/photo-1518904868869-fbb2cdd0429a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8ZmlyZSUyMHNhZmV0eXxlbnwwfHwwfHw%3D&w=1000&q=80" style="width:100%">
     <div class="text"></div>
   </div>
 
   <div class="mySlides ">
-    <div class="numbertext">2 / 3</div>
+    <div class="numbertext"></div>
     <img src="https://c1.wallpaperflare.com/preview/473/961/292/firefighter-emergency-fire-extinguisher.jpg" style="width:100%">
     <div class="text"></div>
   </div>
 
   <div class="mySlides ">
-    <div class="numbertext">3 / 3</div>
+    <div class="numbertext"></div>
     <img src="https://e0.pxfuel.com/wallpapers/285/605/desktop-wallpaper-firefighter-fire-safety-awareness-fire-safety-training-firefighter.jpg" style="width:100%">
     <div class="text"></div>
   </div>
@@ -195,7 +226,6 @@ function showSlides(n) {
 
 
 <div class="fire-prevention-container">
-  <h1 style="text-align: center; ">Fire Prevention</h1>
   <p style="text-align:justify; margin-right: 80px; margin-left: 80px;">Fire Prevention Month is a time dedicated to raising awareness about fire safety and prevention. During this month, fire departments and other organizations often host events and activities aimed at educating the public about fire safety.
 
 The importance of fire prevention cannot be overstated. Fires can cause significant damage to property, and more importantly, they can result in serious injury or even death. By taking simple precautions and following basic fire safety tips, we can reduce the risk of fires in our homes and workplaces.
@@ -206,6 +236,7 @@ In addition to taking steps to prevent fires, it's also important to know what t
 
 By raising awareness about fire safety and prevention during Fire Prevention Month, we can help reduce the risk of fires and keep our communities safe.
 
-
+</p>
+</div>
 </body>
 </html>
